--- a/NLayeredProjectExample/NLayeredProjectExample.Business/NLayeredProjectExample.Business.csproj
+++ b/NLayeredProjectExample/NLayeredProjectExample.Business/NLayeredProjectExample.Business.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\NLayeredProjectExample.DataAccess\NLayeredProjectExample.DataAccess.csproj" />
     <ProjectReference Include="..\NLayeredProjectExample.Entity\NLayeredProjectExample.Entity.csproj" />
   </ItemGroup>
 
