--- a/NLayeredProjectExample/NLayeredProjectExample.Entity/NLayeredProjectExample.Entity.csproj
+++ b/NLayeredProjectExample/NLayeredProjectExample.Entity/NLayeredProjectExample.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NLayeredProjectExample.Core\NLayeredProjectExample.Core.csproj" />
+  </ItemGroup>
+
 </Project>
