--- a/NLayeredProjectExample/NLayeredProject.MvcWebUI/NLayeredProjectExample.MvcWebUI.csproj
+++ b/NLayeredProjectExample/NLayeredProject.MvcWebUI/NLayeredProjectExample.MvcWebUI.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
